Got the popup checks working

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,9 @@
     "icons" : {
         "16": "images/ExtLogo.png"
       },
+    "permissions": [
+        "storage"
+      ],
     "content_scripts": [
         {
           "matches": ["https://bridge.uleth.ca/*"],
