Added button interaction

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Makes the bridge better",
     "version": "1.0",
     "icons" : {
-        "16": "images/ExtLogo.png"
+        "16": "images/TextLogo.png"
       },
     "permissions": [
         "storage"
